# web_with_ROS2

./: app.py  package.xml  setup.py  subscriber_node.py
static/css/: style.css
static/js/: app.js
templates/: collect.html  index.html
